objects/CRMforNonProfit__UniCredit_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>CRMforNonProfit__Client_Id__c</fullName>
        <label>Client Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRMforNonProfit__Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>UniCredit Settings</label>
</CustomObject>